--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shorcut icon" href="assets/tour.png" />
+    <title>Gowhere - Jasa guide traveling</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -12,7 +14,6 @@
     />
     <!-- AOS CSS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Gowhere - Jasa guide traveling</title>
   </head>
   <body class="bg-dark">
     <!-- Navbar Start -->
@@ -21,7 +22,9 @@
       style="border-bottom: 1px solid white"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-uppercase fw-bold fs-3" href="/">Gowhere</a>
+        <a class="navbar-brand text-uppercase fw-bold fs-3" href="index.html"
+          >Gowhere</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -36,16 +39,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/kontak">Kontak</a>
+              <a class="nav-link" href="kontak/index.html">Kontak</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/paket">Paket</a>
+              <a class="nav-link" href="paket/index.html">Paket</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/voucher">Voucher</a>
+              <a class="nav-link" href="voucher/index.html">Voucher</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -182,7 +187,7 @@
                 Hi, saya siap & bersedia mengajak kamu ke tempat yang
                 menakjubkan di Indonesia.
               </p>
-              <a href="/kontak" class="btn btn-dark d-block"
+              <a href="kontak/index.html" class="btn btn-dark d-block"
                 >Hubungi Sekarang</a
               >
             </div>
@@ -201,7 +206,9 @@
                 Tersedia beragam paket tour terbaik & tour pilihan untuk explore
                 Indonesia.
               </p>
-              <a href="/paket" class="btn btn-dark d-block">Biaya Paket</a>
+              <a href="paket/index.html" class="btn btn-dark d-block"
+                >Biaya Paket</a
+              >
             </div>
           </div>
         </div>
@@ -218,7 +225,7 @@
                 Dapatkan kupon menarik untuk ikut tour secara gratis keliling
                 Indonesia bersama saya.
               </p>
-              <a href="/voucher" class="btn btn-dark d-block"
+              <a href="voucher/index.html" class="btn btn-dark d-block"
                 >Lihat Lebih Lengkap</a
               >
             </div>
@@ -243,22 +250,22 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 fw-bold">Faq</h5>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a href="#" class="text-dark" style="text-decoration: none"
                 >Jaminan Uang Kembali</a
               >
             </p>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a href="#" class="text-dark" style="text-decoration: none"
                 >Dijemput dari rumah</a
               >
             </p>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a href="#" class="text-dark" style="text-decoration: none"
                 >Tujuan destinasi</a
               >
             </p>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a href="#" class="text-dark" style="text-decoration: none"
                 >Instansi abal abal</a
               >
             </p>
@@ -266,22 +273,22 @@
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 fw-bold">Pengguna</h5>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a href="#" class="text-dark" style="text-decoration: none"
                 >Akun</a
               >
             </p>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a href="#" class="text-dark" style="text-decoration: none"
                 >Menjadi Member</a
               >
             </p>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a href="#" class="text-dark" style="text-decoration: none"
                 >Beri Rating</a
               >
             </p>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a href="#" class="text-dark" style="text-decoration: none"
                 >Bantuan</a
               >
             </p>
@@ -290,9 +297,10 @@
             <h5 class="text-uppercase mb-4 fw-bold">Kontak</h5>
             <p>
               <a
-                href="wa.me/+6281322919043"
+                href="https://wa.me/+6281322919043"
                 class="text-dark"
                 style="text-decoration: none"
+                target="_blank"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="20"
@@ -330,7 +338,11 @@
               >
             </p>
             <p>
-              <a href="" class="text-dark" style="text-decoration: none"
+              <a
+                href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=adinizulhaq86@gmail.com"
+                class="text-dark"
+                style="text-decoration: none"
+                target="_blank"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="20"
@@ -346,24 +358,6 @@
                 adinizulhaq86@gmail.com</a
               >
             </p>
-            <p>
-              <a href="" class="text-dark" style="text-decoration: none"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  fill="currentColor"
-                  class="bi bi-printer"
-                  viewBox="0 0 16 16"
-                >
-                  <path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z" />
-                  <path
-                    d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z"
-                  />
-                </svg>
-                +12 861 182 12</a
-              >
-            </p>
           </div>
         </div>
         <hr class="mb-4" />
@@ -371,7 +365,7 @@
           <div class="col-md-7 col-lg-8">
             <p>
               Copyright &copy;2023 All rights reserved by
-              <a href="" style="text-decoration: none"
+              <a href="index.html" style="text-decoration: none"
                 ><strong class="text-uppercase text-dark">Gowhere</strong></a
               >
             </p>
@@ -380,7 +374,11 @@
             <div class="text-center text-md-right">
               <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                  <a href="" class="btn-floating btn-sm text-dark">
+                  <a
+                    href="https://facebook.com/adin.izulhaq.77"
+                    class="btn-floating btn-sm text-dark"
+                    target="_blank"
+                  >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="20"
@@ -396,7 +394,11 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="" class="btn-floating btn-sm text-dark">
+                  <a
+                    href="https://twitter.com/adin_izlhq"
+                    class="btn-floating btn-sm text-dark"
+                    target="_blank"
+                  >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="20"
