--- a/paket/index.html
+++ b/paket/index.html
@@ -73,7 +73,7 @@
 
     <!-- Hero  Start -->
     <div class="container-fluid text-dark mt-4">
-      <div class="row">
+      <div class="row g-4">
         <div class="col-sm-4" data-aos="zoom-in" data-aos-duration="1000">
           <div class="card frame" style="max-width: 540px">
             <div class="row g-0">
