update paket section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,12 @@
       <!-- Card Start -->
       <div class="row text-dark">
         <div class="col-sm-4 g-4">
-          <div class="card" data-aos="fade-up" data-aos-duration="1000">
+          <div
+            class="card"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+            data-aos-delay="50"
+          >
             <div class="card-body">
               <h5 class="card-title text-center">Tour Bersama Saya</h5>
               <p class="card-text">
