--- a/paket/index.html
+++ b/paket/index.html
@@ -115,8 +115,8 @@
                 <div class="card-body">
                   <h5 class="card-title">Paket Tour Bromo</h5>
                   <p class="card-text">
-                    Melihat pemandangan bromo saat sunset dan sunrise dengan
-                    orang terkasih kalian.
+                    Melihat pemandangan bromo saat sunrise dengan orang terkasih
+                    kalian.
                   </p>
                   <p class="card-text">
                     <small class="text-muted">Rp400.000,-</small>
@@ -139,7 +139,7 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Paket Mendaki Semeru</h5>
+                  <h5 class="card-title">Paket Tour Semeru</h5>
                   <p class="card-text">
                     Mendaki bersama orang dari seluruh dunia dengan biaya yang
                     murah meriah.
